@@ -18,6 +18,7 @@
 - added: `route.groups` with defined groups
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 - added: new directory `schemas` with a new configuration item `directory-schemas'
+- added: new directory `operations` with a new configuration item `directory-operations'
 
 - updated: `GROUP()` by adding a new argument `url_prefix`
 - updated: `NEWSCHEMA()` supports `NEWSCHEMA('group/name')`
